# aniy

./: .gitignore  README.md  flake.nix  justfile
aniy/: Cargo.toml
aniy/src/: animations.rs  lib.rs  objects.rs
sample_project/: Cargo.toml
sample_project/src/: main.rs
