[package]
name = "aniy"
version = "0.1.0"
edition = "2021"
description = "Rust animation library built on top of svg"
license = "MIT"
readme = "../README.md"

[dependencies]
indicatif = { version = "0.17.8", features = ["rayon"], optional = true }
log = "0.4.21"
mathjax = { version = "0.1.1", default-features = false, features = ["node"] }
ndarray = "0.15.6"
open = "5.1.2"
rayon = "1.10.0"
resvg = "0.41.0"
svg = "0.17.0"
video-rs = { version = "0.7.3", features = ["ndarray"] }

[features]
progress = ["dep:indicatif"]
